--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --text-color: #a4c7f3;
+    --card-front-color: #14941a;
+    --card-back-color: #511e5f;
 }
 
 body {
